# WeatherProject

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  apiFunctions.cpp  config.json  configFileTest.cpp  curlFunctions.cpp  globals.cpp  initialConfigRead.cpp  main.cpp  menuSystem.cpp  menuTest.cpp  otherFunctions.cpp  weather.json  weatherTest_lcurl.cpp
lang/: English.h  English.hpp  Spanish.hpp
lib/: apiFunctions.hpp  curlFunctions.hpp  globals.hpp  httplib.h  initialConfigRead.hpp  menuSystem.hpp  otherFunctions.hpp
src/: apiFunctions.cpp  curlFunctions.cpp  globals.cpp  main.cpp  menuSystem.cpp  otherFunctions.cpp
